--- a/MultiVision/package.json
+++ b/MultiVision/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.13.4",
+    "stylus": "^0.53.0"
+  }
 }
