--- a/MultiVision/package.json
+++ b/MultiVision/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "stylus": "^0.53.0"
+  },
+  "devDependencies": {
+    "bower": "^1.7.7"
   }
 }
