--- a/MultiVision/bower.json
+++ b/MultiVision/bower.json
@@ -8,6 +8,9 @@
   "private": true,
   "dependencies": {
     "jquery": "^2.2.0",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "angular": "^1.4.9",
+    "angular-resource": "^1.4.9",
+    "angular-route": "^1.4.9"
   }
 }
